test/classes/delete-free/lifetimes/needs-return-annotation.good
needs-return-annotation.chpl:9: In function 'bad1':
needs-return-annotation.chpl:14: error: Scoped variable bb would outlive the value it is set to
needs-return-annotation.chpl:12: note: consider scope of own
needs-return-annotation.chpl:24: In function 'bad2':
needs-return-annotation.chpl:26: error: Reference to scoped variable cannot be returned
needs-return-annotation.chpl:25: note: consider scope of key
